--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url(../blocks/main/main.css);
+@import url(../blocks/main/__container/main__container.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__line/header__line.css);
