--- a/blocks/header/__line/header__line.css
+++ b/blocks/header/__line/header__line.css
@@ -2,3 +2,9 @@
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   padding-top: 41px;
 }
+
+@media screen and (max-width: 400px) {
+  .header__line {
+    padding-top: 32px;
+  }
+}
