style: add dimensions to container

--- a/blocks/card/__text-container/card__text-container.css
+++ b/blocks/card/__text-container/card__text-container.css
@@ -1,4 +1,7 @@
 .card__text-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  padding-left: 21px;
+  padding-right: 15px;
 }
