--- a/pages/index.css
+++ b/pages/index.css
@@ -26,3 +26,6 @@
 @import url(../blocks/card/__like-button/card__like-button.css);
 @import url(../blocks/card/__text-container/card__text-container.css);
 @import url(../blocks/card/__title/card__title.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
