--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,6 @@
 .footer__copyright {
   padding-top: 68px;
+  padding-bottom: 60px;
   font-family: "Inter";
   font-weight: 400;
   font-size: 18px;
