--- a/pages/index.css
+++ b/pages/index.css
@@ -29,3 +29,8 @@
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+
+@import url(../blocks/modal/modal.css);
+@import url(../blocks/modal/__profile-name/modal__profile-name.css);
+@import url(../blocks/modal/__profile-title/modal__profile-title.css);
+@import url(../blocks/modal/__title/modal__title.css);
