--- a/pages/index.css
+++ b/pages/index.css
@@ -34,3 +34,4 @@
 @import url(../blocks/modal/__profile-name/modal__profile-name.css);
 @import url(../blocks/modal/__profile-title/modal__profile-title.css);
 @import url(../blocks/modal/__title/modal__title.css);
+@import url(../blocks/modal/__form/modal__form.css);
