style: add css to modal__overlay

--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,4 @@
 @import url(../blocks/modal/__profile-title/modal__profile-title.css);
 @import url(../blocks/modal/__title/modal__title.css);
 @import url(../blocks/modal/__form/modal__form.css);
+@import url(../blocks/modal/__overlay/modal__overlay.css);
