--- a/pages/index.css
+++ b/pages/index.css
@@ -36,3 +36,9 @@
 @import url(../blocks/modal/__title/modal__title.css);
 @import url(../blocks/modal/__form/modal__form.css);
 @import url(../blocks/modal/__overlay/modal__overlay.css);
+
+@import url(../blocks/modal/__body/modal__body.css);
+@import url(../blocks/modal/__close-button/modal__close-button.css);
+@import url(../blocks/modal/__close/modal__close.css);
+@import url(../blocks/modal/__container/modal__container.css);
+@import url(../blocks/modal/__inset/modal__inset.css);
