style: add rules for modal states

--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,7 +1,23 @@
 .modal {
-  color: white;
-  visibility: hidden;
-  max-width: 430px;
-  max-height: 330px;
   position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 50;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+  visibility: hidden;
+}
+
+.modal.state-appear {
+  visibility: visible;
+}
+
+.modal-frame.state-leave {
+  visibility: visible;
 }
