--- a/blocks/modal/__overlay/modal__overlay.css
+++ b/blocks/modal/__overlay/modal__overlay.css
@@ -6,13 +6,13 @@
   right: 0;
   bottom: 0;
   margin: auto;
-  background-color: blue;
+  background-color: #000;
   opacity: 0;
   visibility: hidden;
   z-index: 2;
 }
 
 .modal__overlay_active {
-  opacity: 0.7;
+  opacity: 0.5;
   visibility: visible;
 }
