style: add modal__input css files and link them

--- a/pages/index.css
+++ b/pages/index.css
@@ -40,3 +40,4 @@
 @import url(../blocks/modal/__close-button/modal__close-button.css);
 @import url(../blocks/modal/__close/modal__close.css);
 @import url(../blocks/modal/__container/modal__container.css);
+@import url(../blocks/modal/__input/modal__input.css);
