--- a/pages/index.css
+++ b/pages/index.css
@@ -41,3 +41,4 @@
 @import url(../blocks/modal/__close/modal__close.css);
 @import url(../blocks/modal/__container/modal__container.css);
 @import url(../blocks/modal/__input/modal__input.css);
+@import url(../blocks/modal/__form-submit/modal__form-submit.css);
