--- a/blocks/modal/__form/modal__form.css
+++ b/blocks/modal/__form/modal__form.css
@@ -1,18 +1,5 @@
 .modal__form {
-  background: white;
-  min-width: 430px;
-  max-width: 430px;
-  min-height: 330px;
-  border-radius: 10px;
-  padding: 34px 36px 36px 36px;
-  margin: auto;
-  position: relative;
-  box-sizing: border-box;
-}
-
-@media screen and (max-width: 480px) {
-  .form {
-    max-width: 85%;
-    min-width: 315px;
-  }
+  align-self: center;
+  padding-top: 54px;
+  max-width: 358px;
 }
