--- a/blocks/modal/__title/modal__title.css
+++ b/blocks/modal/__title/modal__title.css
@@ -1,7 +1,8 @@
 .modal__title {
-    color: black;
-    font-family: "Inter";
-    font-size: 24px;
-    font-weight: 900;
-    line-height: 29px;
-    margin: 34px 0 0 36px
+  color: black;
+  font-family: "Inter";
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 29px;
+  margin: 34px 0 0 36px;
+}
