--- a/blocks/modal/__close/modal__close.css
+++ b/blocks/modal/__close/modal__close.css
@@ -1,4 +1,15 @@
 .modal__close {
+  background-color: transparent;
+  background-image: url(../../../img/close.svg);
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  border-style: none;
+  height: 40px;
+  padding: 0;
   position: absolute;
-  top: 10px;
+  right: -50px;
+  top: -40px;
+  transition: opacity 0.5s linear;
+  width: 60px;
 }
