--- a/pages/index.css
+++ b/pages/index.css
@@ -24,6 +24,7 @@
 @import url(../blocks/card/__container/card__container.css);
 @import url(../blocks/card/__img/card__img.css);
 @import url(../blocks/card/__like-button/card__like-button.css);
+@import url(../blocks/card/__like-button/_active/card__like-button_active.css);
 @import url(../blocks/card/__text-container/card__text-container.css);
 @import url(../blocks/card/__title/card__title.css);
 
