feature: make main container responsive

--- a/blocks/main/__container/main__container.css
+++ b/blocks/main/__container/main__container.css
@@ -2,3 +2,9 @@
   max-width: 880px;
   margin: auto;
 }
+
+@media screen and (max-width: 940px) {
+  .main__container {
+    max-width: 90vw;
+  }
+}
