--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,3 +4,12 @@
   justify-content: space-between;
   padding-top: 40px;
 }
+
+@media screen and (max-width: 640px) {
+  .profile {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+}
