feature: make profile container left responsive

--- a/blocks/profile/__container-left/profile__container-left.css
+++ b/blocks/profile/__container-left/profile__container-left.css
@@ -2,3 +2,10 @@
   flex-grow: 1;
   padding-right: 30px;
 }
+
+@media screen and (max-width: 640px) {
+  .profile__container-left {
+    padding-right: 0;
+    padding-bottom: 26.25px;
+  }
+}
