feature: make profile container middle responsive

--- a/blocks/profile/__container-middle/profile__container-middle.css
+++ b/blocks/profile/__container-middle/profile__container-middle.css
@@ -3,3 +3,9 @@
   flex-direction: column;
   flex-grow: 10000;
 }
+
+@media screen and (max-width: 640px) {
+  .profile__container-middle {
+    padding-bottom: 36px;
+  }
+}
