--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,3 +7,10 @@
   line-height: 22px;
   color: #545454;
 }
+
+@media screen and (max-width: 460px) {
+  .profile__container-right {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
