--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -7,3 +7,10 @@
   margin: 0;
   padding-top: 13px;
 }
+
+@media screen and (max-width: 460px) {
+  .profile__title {
+    font-size: 22px;
+    line-height: 27px;
+  }
+}
