--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -7,3 +7,10 @@
   padding-right: 18px;
   margin: 0;
 }
+
+@media screen and (max-width: 460px) {
+  .profile__name {
+    font-size: 22px;
+    line-height: 27px;
+  }
+}
