--- a/blocks/profile/__edit-button/_icon/profile__edit-button_icon.css
+++ b/blocks/profile/__edit-button/_icon/profile__edit-button_icon.css
@@ -2,3 +2,10 @@
   width: 10px;
   height: 10px;
 }
+
+@media screen and (max-width: 460px) {
+  .profile__edit-button_icon {
+    width: 7.5px;
+    height: 7.5px;
+  }
+}
