--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -12,3 +12,10 @@
   cursor: pointer;
   opacity: 0.5;
 }
+
+@media screen and (max-width: 460px) {
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+  }
+}
