style: adjust post button for smaller screens

--- a/blocks/profile/__post-button/profile__post-button.css
+++ b/blocks/profile/__post-button/profile__post-button.css
@@ -12,3 +12,9 @@
   cursor: pointer;
   opacity: 0.5;
 }
+
+@media screen and (max-width: 460px) {
+  .profile__post-button {
+    width: 90vw;
+  }
+}
