--- a/blocks/profile/__post-button/_icon/profile__post-button_icon.css
+++ b/blocks/profile/__post-button/_icon/profile__post-button_icon.css
@@ -2,3 +2,10 @@
   width: 22px;
   height: 22px;
 }
+
+@media screen and (max-width: 460px) {
+  .profile__post-button_icon {
+    width: 16px;
+    height: 16px;
+  }
+}
