--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 460px) {
-  .profile__container-right {
+  .footer__copyright {
     font-size: 14px;
     line-height: 17px;
   }
