--- a/blocks/modal/__close/modal__close.css
+++ b/blocks/modal/__close/modal__close.css
@@ -1,6 +1,6 @@
 .modal__close {
   height: 40px;
-  width: 60px;
+  width: 40px;
   position: absolute;
   right: -50px;
   top: -40px;
@@ -15,4 +15,13 @@
 .modal__close:hover {
   cursor: pointer;
   opacity: 0.5;
+}
+
+@media screen and (max-width: 540px) {
+  .modal__close {
+    width: 26px;
+    height: 26px;
+    right: -1px;
+    top: -52px;
+  }
 }
