--- a/blocks/modal/__container/modal__container.css
+++ b/blocks/modal/__container/modal__container.css
@@ -7,3 +7,9 @@
   position: relative;
   width: 430px;
 }
+
+@media screen and (max-width: 520px) {
+  .modal__container {
+    max-width: 282px;
+  }
+}
