--- a/blocks/modal/__title/modal__title.css
+++ b/blocks/modal/__title/modal__title.css
@@ -6,3 +6,13 @@
   line-height: 29px;
   margin: 34px 0 0 36px;
 }
+
+@media screen and (max-width: 520px) {
+  .modal__title {
+    font-size: 18px;
+    line-height: 22px;
+    margin-left: 22px;
+    margin-top: 25px;
+    text-align: left;
+  }
+}
