--- a/blocks/modal/__form/modal__form.css
+++ b/blocks/modal/__form/modal__form.css
@@ -3,3 +3,10 @@
   padding-top: 54px;
   max-width: 358px;
 }
+
+@media screen and (max-width: 520px) {
+  .modal__form {
+    padding-top: 75px;
+    max-width: 238px;
+  }
+}
