--- a/pages/index.css
+++ b/pages/index.css
@@ -41,3 +41,5 @@
 @import url(../blocks/modal/__container/modal__container.css);
 @import url(../blocks/modal/__input/modal__input.css);
 @import url(../blocks/modal/__form-submit/modal__form-submit.css);
+
+@import url(../blocks/modal-post/modal-post.css);
