--- a/blocks/card/__remove-button/card__remove-button.css
+++ b/blocks/card/__remove-button/card__remove-button.css
@@ -1,6 +1,9 @@
 .card__remove-button {
   width: 18px;
   height: 20px;
+  position: absolute;
+  margin-left: 250px;
+  margin-top: 18px;
   background: transparent;
   border: none;
   background-image: url(../../../img/trash.svg);
