--- a/pages/index.css
+++ b/pages/index.css
@@ -46,3 +46,4 @@
 @import url(../blocks/modal-post/__close/modal-post__close.css);
 
 @import url(../blocks/card/__remove-button/card__remove-button.css);
+@import url(../blocks/modal/__type-img/modal__type-img.css);
