style: add css code for image close button

--- a/pages/index.css
+++ b/pages/index.css
@@ -48,3 +48,5 @@
 @import url(../blocks/card/__remove-button/card__remove-button.css);
 @import url(../blocks/modal/__type-img/modal__type-img.css);
 @import url(../blocks/modal/__overlay/modal__overlay.css);
+@import url(../blocks/modal/__window/modal__window.css);
+@import url(../blocks/modal-image/__close/modal-image__close.css);
