style: add css rules modal__img

--- a/pages/index.css
+++ b/pages/index.css
@@ -50,3 +50,4 @@
 @import url(../blocks/modal/__overlay/modal__overlay.css);
 @import url(../blocks/modal/__window/modal__window.css);
 @import url(../blocks/modal-image/__close/modal-image__close.css);
+@import url(../blocks/modal/__img/modal__img.css);
