--- a/pages/index.css
+++ b/pages/index.css
@@ -51,3 +51,4 @@
 @import url(../blocks/modal/__window/modal__window.css);
 @import url(../blocks/modal-image/__close/modal-image__close.css);
 @import url(../blocks/modal/__img/modal__img.css);
+@import url(../blocks/modal/__img-caption/modal__img-caption.css);
