--- a/blocks/lightbox/lightbox.css
+++ b/blocks/lightbox/lightbox.css
@@ -7,3 +7,9 @@
   background-color: rgba (0, 0, 0, 0.8);
   display: none;
 }
+
+#lightbox.active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
