--- a/blocks/lightbox/lightbox.css
+++ b/blocks/lightbox/lightbox.css
@@ -4,7 +4,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba (0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
   display: none;
 }
 
@@ -12,4 +12,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#lightbox img {
+  max-width: 90%;
+  max-height: 80%;
+  padding: 4px;
+  background-color: black;
+  border: 2px solid white;
 }
