--- a/blocks/lightbox/__close/lightbox__close.css
+++ b/blocks/lightbox/__close/lightbox__close.css
@@ -1,15 +1,16 @@
 .lightbox__close {
+  position: absolute;
   height: 40px;
   width: 40px;
-  position: absolute;
-  right: -50px;
-  top: -40px;
+  right: 50px;
+  top: 29px;
   background-color: transparent;
   background-image: url(../../../img/close.svg);
   background-position: 50%;
   background-repeat: no-repeat;
   border-style: none;
   padding: 0;
+  z-index: 5;
 }
 
 .lightbox__close:hover {
