feature: add animation to edit profile modal

--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -10,8 +10,11 @@
   justify-content: center;
   visibility: hidden;
   background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: visibility 1s, opacity 1s linear;
 }
 
 .modal_active {
   visibility: visible;
+  opacity: 1;
 }
