--- a/blocks/profile/__post-icon/profile__post-icon.css
+++ b/blocks/profile/__post-icon/profile__post-icon.css
@@ -1,10 +1,10 @@
-.profile__post-button_icon {
+.profile__post-icon {
   width: 22px;
   height: 22px;
 }
 
 @media screen and (max-width: 460px) {
-  .profile__post-button_icon {
+  .profile__post-icon {
     width: 16px;
     height: 16px;
   }
