--- a/pages/index.css
+++ b/pages/index.css
@@ -50,3 +50,5 @@
 @import url(../blocks/lightbox/lightbox.css);
 @import url(../blocks/lightbox/__close/lightbox__close.css);
 @import url(../blocks/lightbox/__title/lightbox__title.css);
+
+@import url(../blocks/modal/__button/modal__button.css);
