--- a/blocks/modal/__close-button/modal__close-button.css
+++ b/blocks/modal/__close-button/modal__close-button.css
@@ -1,4 +1,4 @@
-.modal__button {
+.modal__close-button {
   height: 40px;
   width: 40px;
   position: absolute;
@@ -12,13 +12,13 @@
   padding: 0;
 }
 
-.modal__button:hover {
+.modal__close-button:hover {
   cursor: pointer;
   opacity: 0.5;
 }
 
 @media screen and (max-width: 540px) {
-  .modal__button {
+  .modal__close-button {
     width: 26px;
     height: 26px;
     right: -1px;
