--- a/pages/index.css
+++ b/pages/index.css
@@ -52,3 +52,4 @@
 @import url(../blocks/lightbox/__title/lightbox__title.css);
 
 @import url(../blocks/modal/__close-button/modal__close-button.css);
+@import url(../blocks/modal/__input/_has-error/modal__input_has-error.css);
