--- a/blocks/modal/__error/modal__error.css
+++ b/blocks/modal/__error/modal__error.css
@@ -5,11 +5,9 @@
   line-height: 15px;
   color: #ff0000;
   visibility: hidden;
-  margin-bottom: 30px;
-  padding-bottom: 30px;
+  margin: 0px 0px 30px 0px;
 }
 
 .modal__error_visible {
   visibility: visible;
-  margin-bottom: 30px;
 }
