--- a/blocks/modal/__close-button/modal__close-button.css
+++ b/blocks/modal/__close-button/modal__close-button.css
@@ -5,7 +5,7 @@
   right: -50px;
   top: -40px;
   background-color: transparent;
-  background-image: url(../../../img/close.svg);
+  background-image: url(../../../images/close.svg);
   background-position: 50%;
   background-repeat: no-repeat;
   border-style: none;
