fix: fix URL on trash.svg

--- a/blocks/card/__remove-button/card__remove-button.css
+++ b/blocks/card/__remove-button/card__remove-button.css
@@ -6,7 +6,7 @@
   margin-top: 18px;
   background: transparent;
   border: none;
-  background-image: url(../../../img/trash.svg);
+  background-image: url(../../../images/trash.svg);
 }
 
 .card__remove-button:hover {
