fix: fix URL on like.svg

--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -3,7 +3,7 @@
   height: 19px;
   background: transparent;
   border: none;
-  background-image: url(../../../img/like.svg);
+  background-image: url(../../../images/like.svg);
 }
 
 .card__like-button:hover {
