--- a/blocks/card/__like-button/_active/card__like-button_active.css
+++ b/blocks/card/__like-button/_active/card__like-button_active.css
@@ -1,3 +1,3 @@
 .card__like-button_active {
-  background-image: url(../../../../img/like-fill.svg);
+  background-image: url(../../../../images/like-fill.svg);
 }
