--- a/blocks/lightbox/__close/lightbox__close.css
+++ b/blocks/lightbox/__close/lightbox__close.css
@@ -5,7 +5,7 @@
   right: 270px;
   top: 29px;
   background-color: transparent;
-  background-image: url(../../../img/close.svg);
+  background-image: url(../../../images/close.svg);
   background-position: 50%;
   background-repeat: no-repeat;
   border-style: none;
