--- a/blocks/modal/__input/modal__input.css
+++ b/blocks/modal/__input/modal__input.css
@@ -1,3 +1,5 @@
+@import url(./_has-error/modal__input_has-error.css);
+
 .modal__input {
   border: none, none, rgba(0, 0, 0, 0.2), none;
   color: #000;
