fix: center cards for improved view on small screens

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -5,6 +5,12 @@
   padding-top: 50px;
 }
 
+@media screen and (max-width: 942px) {
+  .cards {
+    justify-content: center;
+  }
+}
+
 @media screen and (max-width: 640px) {
   .cards {
     padding-top: 36px;
