--- a/blocks/modal/__input/modal__input.css
+++ b/blocks/modal/__input/modal__input.css
@@ -1,7 +1,8 @@
 @import url(./_has-error/modal__input_has-error.css);
 
 .modal__input {
-  border: none, none, rgba(0, 0, 0, 0.2), none;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   color: #000;
   font-family: "Inter";
   font-size: 14px;
