--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,4 +9,4 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/modal/modal.css);
 @import url(../blocks/modal-post/modal-post.css);
-@import url(../blocks/lightbox/lightbox.css);
+@import url(../blocks/popup/popup.css);
