--- a/src/blocks/modal/__form/modal__form.css
+++ b/src/blocks/modal/__form/modal__form.css
@@ -4,6 +4,10 @@
   max-width: 358px;
 }
 
+.modal__form.modal__form_delete {
+  padding-top: 0px;
+}
+
 @media screen and (max-width: 520px) {
   .modal__form {
     padding-top: 75px;
