--- a/src/blocks/modal/__title/modal__title.css
+++ b/src/blocks/modal/__title/modal__title.css
@@ -7,6 +7,10 @@
   margin: 34px 0 0 36px;
 }
 
+.modal__title.modal__title_delete {
+  margin: 34px 0px 38px 0px;
+}
+
 @media screen and (max-width: 520px) {
   .modal__title {
     font-size: 18px;
