style: add hover to profile image

--- a/src/blocks/profile/__container-left/profile__container-left.css
+++ b/src/blocks/profile/__container-left/profile__container-left.css
@@ -1,6 +1,7 @@
 .profile__container-left {
   flex-grow: 1;
   padding-right: 30px;
+  position: relative;
 }
 
 @media screen and (max-width: 640px) {
