style: fix form fields getting small when error message appears

--- a/src/blocks/modal/__input/modal__input.css
+++ b/src/blocks/modal/__input/modal__input.css
@@ -10,9 +10,13 @@
   line-height: 17px;
   margin-bottom: 0px;
   outline-color: rgba(85, 0, 85, 0.5);
-  padding-bottom: 5px;
   width: 100%;
+  padding-bottom: 13px;
 }
 .modal__input:focus {
   outline: none;
+}
+
+.modal__input:last-of-type {
+  margin-top: 30px;
 }
