--- a/src/blocks/modal/__error/modal__error.css
+++ b/src/blocks/modal/__error/modal__error.css
@@ -5,7 +5,8 @@
   line-height: 15px;
   color: #ff0000;
   visibility: hidden;
-  margin: 0px 0px 30px 0px;
+  padding: 0px 0px 30px 0px;
+  position: absolute;
 }
 
 .modal__error_visible {
