--- a/src/blocks/modal/__form-submit/modal__form-submit.css
+++ b/src/blocks/modal/__form-submit/modal__form-submit.css
@@ -10,7 +10,7 @@
   line-height: 22px;
   margin-bottom: 36px;
   margin-top: 48px;
-  min-width: 358px;
+  width: 100%;
   padding-bottom: 14px;
   padding-top: 14px;
 }
