--- a/src/blocks/modal/__form/modal__form.css
+++ b/src/blocks/modal/__form/modal__form.css
@@ -1,7 +1,7 @@
 .modal__form {
   align-self: center;
   padding-top: 54px;
-  max-width: 358px;
+  width: 83%;
 }
 
 .modal__form.modal__form_delete {
